--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,32 +23,33 @@
       "test:coverage:preview": "pnpm test:coverage && vite preview --outDir ./coverage --open"
    },
    "dependencies": {
+      "@trpc/client": "^10.29.1",
       "@trpc/server": "^10.29.1",
       "cookie-parser": "^1.4.6",
-      "@trpc/client": "^10.29.1",
       "express": "^4.18.2",
       "express-serve-static-core": "^0.1.1",
       "zod": "^3.21.4"
    },
    "devDependencies": {
-      "@react-vite-trpc/tsconfig": "workspace:*",
       "@react-vite-trpc/config": "workspace:*",
+      "@react-vite-trpc/tsconfig": "workspace:*",
       "@swc/core": "^1.3.62",
+      "@trivago/prettier-plugin-sort-imports": "^4.2.0",
       "@types/cookie-parser": "^1.4.3",
       "@types/express": "^4.17.17",
       "@types/fs-extra": "^11.0.1",
       "@types/module-alias": "^2.0.1",
       "@types/node": "^18.16.17",
+      "@vitest/coverage-istanbul": "^0.34.1",
       "cross-env": "^7.0.3",
       "dotenv": "^16.1.4",
       "envalid": "^7.3.1",
       "fs-extra": "^11.1.1",
       "module-alias": "^2.2.3",
       "nodemon": "^2.0.22",
+      "pm2": "^5.3.0",
+      "prisma": "^5.13.0",
       "ts-node": "^10.9.1",
-      "@vitest/coverage-istanbul": "^0.34.1",
-      "typescript": "^4.9.5",
-      "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-      "pm2": "^5.3.0"
+      "typescript": "^4.9.5"
    }
 }
