--- a/package.json
+++ b/package.json
@@ -29,16 +29,38 @@
    },
    "devDependencies": {
       "@react-vite-trpc/eslint-config": "workspace:*",
-      "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+      "@swc/core": "^1.5.5",
+      "@trivago/prettier-plugin-sort-imports": "^4.3.0",
       "@types/glob": "^8.1.0",
-      "eslint": "^8.46.0",
-      "glob": "^10.3.3",
-      "stylelint": "^15.10.2",
-      "ts-node": "^10.9.1",
-      "turbo": "^1.10.12",
-      "typescript": "^5.1.6",
-      "vite-tsconfig-paths": "^4.2.0",
-      "vitest": "^0.34.1",
-      "@swc/core": "^1.3.71"
+      "eslint": "^8.57.0",
+      "glob": "^10.3.12",
+      "stylelint": "^15.11.0",
+      "ts-node": "^10.9.2",
+      "turbo": "^1.13.3",
+      "typescript": "^5.4.5",
+      "vite-tsconfig-paths": "^4.3.2",
+      "vitest": "^0.34.6"
+   },
+   "pnpm": {
+      "overrides": {
+         "systeminformation@>=5.0.0 <5.21.7": ">=5.21.7",
+         "postcss@<8.4.31": ">=8.4.31",
+         "get-func-name@<2.0.1": ">=2.0.1",
+         "zod@<=3.22.2": ">=3.22.3",
+         "@adobe/css-tools@<4.3.1": ">=4.3.1",
+         "@adobe/css-tools@<4.3.2": ">=4.3.2",
+         "vite@>=4.0.0 <=4.5.1": ">=4.5.2",
+         "follow-redirects@<1.15.4": ">=1.15.4",
+         "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+         "semver@>=6.0.0 <6.3.1": ">=6.3.1",
+         "axios@>=0.8.1 <0.28.0": ">=0.28.0",
+         "ip@<1.1.9": ">=1.1.9",
+         "ip@=2.0.0": ">=2.0.1",
+         "@cypress/request@<=2.88.12": ">=3.0.0",
+         "express@<4.19.2": ">=4.19.2",
+         "follow-redirects@<=1.15.5": ">=1.15.6",
+         "@babel/traverse@<7.23.2": ">=7.23.2",
+         "vite@>=4.0.0 <=4.5.2": ">=4.5.3"
+      }
    }
 }
